@@ -64,6 +64,9 @@ Unreleased
 - fix issue380 by making --resultlog only rely on longrepr instead
   of the "reprcrash" attribute which only exists sometimes.
 
+- address issue122: allow @pytest.fixture(params=iterator) by exploding
+  into a list early on.
+
 - fix pexpect-3.0 compatibility for pytest's own tests.
   (fixes issue386)
 
